<resources>
    <string name="app_name">#LOSAL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="losal_hs">Los Alamitos High School!</string>
        <string name="copyright">Copyright 2013 Localism Inc. All rights reserved.</string>
        <string name="go_griffins">Go Griffins!</string>
    <string name="notices">Notices</string>
    <string name="social_feed">Social Feed</string>
    <string name="events">School Links</string>
    <string name="grades">Grades</string>
    <string name="schedule">Schedule</string>
    <string name="socrative">Socrative</string>
    <string name="edmodo">Edmodo</string>
        <string name="po_more_options">More Options</string>
        <string name="group_heading_1">Social</string>
        <string name="group_heading_2">My Info</string>
		<string name="group_heading_3">Classroom Tools</string>
		<string name="ob_1_title_1">The \#LOSAL App</string>
		<string name="ob_1_subtitle_1">connects the classroom</string>
		<string name="ob_1_subtitle_2">campus and community</string>
		<string name="ob_2_title_1">Submit public posts</string>
		<string name="ob_2_subtitle_1">when you use \#losal</string>
		<string name="ob_2_subtitle_2">on Twitter and Instagram</string>
	<string name="verify_start">The #LOSAL App has special features for verified members of the Los Alamitos High School community.</string>
	<string name="verify_error">Oops\! Did you miss the app registration\? Your number wasn\'t recognized. Email us for access or retry below.</string>
	<string name="verify_success">Thanks\! You will receive a text message from (562) 320-8034. Click the text link to complete the process.</string>
	<string name="verify_full_experience">Get the full experience\!</string>
	<string name="enter_phone">Enter your mobile number.</string>
	<string name="verify_no_text">No text message? Email us and we\'ll see what the deal is, or click \"retry\" below.</string>
	<string name="verify_button">Verify</string>
	<string name="verify_button_retry">Retry</string>
	<string name="well_see"> and we\'ll see what the deal is, or click \"retry\" below.</string>
 <string name="calendar_dialog_title">Subscribe to Losal Calendar</string>
 <string name="calendar_dialog_message">Subscribe to Losal\'s calendar and you will stay informed\!</string>
 <string name="calendar_dialog_yes">Yes</string>
  <string name="calendar_dialog_no">Not Now</string>
  <string name="calendar_url">http://www.google.com/calendar/render?cid=http%3A%2F%2Flosal.tandemcal.com%2Findex.php%3Ftype%3Dexport%26action%3Dical%26export_type%3Dnow_to_infinity%26activities%3D15%26limit%3Dnone%26date_start%3D2013-09-12%26page%3D2</string>
  <string name="success">Success!</string>
  <string name="calendar_footer">This will display school-wide events on your calendar app.</string>
    <string name="calendar_message">Now sync major\nschool events with\nyour Calendar.</string>
    <string name="calendar_button">Sync Calendar</string>
    <string name="login_fb">Login to Facebook</string>
    <string name="activate_social">Activate Your Social Networks</string>
    <string name="fb">Facebook</string>
    <string name="tw">Twitter</string>
    <string name="insta">Instagram</string>
   	<string name="activate_twitter">Connect Twitter</string>
	<string name="activate_instagram">Connect Instagram</string>
    <string name="fb_app_id">253614024715719</string>
    <string name="instagram_authorize_url">https://api.instagram.com/oauth/authorize/</string>
    <string name="instagram_access_token_url">https://api.instagram.com/oauth/access_token/</string>
    <string name="instagram_version_url">https://api.instagram.com/v1</string>
	<string name="instagram_client_id">64392b8719fb49f59f71213ed640fb68</string>
	<string name="instagram_client_secret">7897fc2fa21d4572a0218fe1a012847d</string>
	<string name="instagram_callback_url">losal64392b8719fb49f59f71213ed640fb68://authorize</string>
        <string name="tw_consumer_key">wNe7Ugi45G8YKu3jih1NA</string>
        <string name="tw_consumer_secret">xgtZlqu75hA4SVAccJa0L2pXmeaehblxbTNKgE4aNM</string>
    	<string name="tw_callback_url">http://www.joezoob.com</string>
    <string name="social_footer">The #LOSAL APP uses Localism! to protect your privacy and unite our community.  Your private information is not shared. 
    </string>
    <string name="parse_app_id">zFi294oXTVT6vj6Tfed5heeF6XPmutl0y1Rf7syg</string>
    <string name="parse_client_key">jyL9eoOizsJqQK5KtADNX5ILpjgSdP6jW9Lz1nAU</string>
    <string name="sched_period_0">Period 0</string>
    <string name="sched_period_1">Period 1</string>
    <string name="sched_period_2">Period 2</string>
    <string name="sched_period_3">Period 3</string>
	<string name="sched_period_4">Period 4</string>
    <string name="sched_period_5">Period 5</string>
	<string name="sched_period_6">Period 6</string>
    <string name="sched_period_1_or_2">Period 1 or 2</string>
    <string name="sched_period_3_or_4">Period 3 or 4</string>
    <string name="sched_period_5_or_6">Period 5 or 6</string>
	<string name="sched_nutrition">Nutrition</string>
	<string name="sched_lunch">Lunch</string>
	<string name="sched_no_lunch">No Lunch</string>
	<string name="sched_period_3a">Period 3A</string>
	<string name="sched_period_3b">Period 3B</string>
	<string name="sched_in_class">In Class</string>
	<string name="sched_assembly">Assembly</string>
	<string name="sched_passing">Passing</string>
		<string name="sched_title_reg">Regular Day</string>
		<string name="sched_title_late">Late Start Day</string>
		<string name="sched_title_min">Minimum Day</string>
		<string name="sched_title_assem">Assembly</string>
		<string name="sched_title_block">Block</string>
		<string name="sched_title_finals">Finals</string>
		<string name="dash">-</string>
	<string name="mo_suggest_feature">Suggest a Feature</string>
	<string name="mo_help">Need Help\?</string>
	<string name="mo_about">About this app</string>
	<string name="mo_reset">Reset App</string>
		<string name="mo_safety">Safety and security</string>
		<string name="mo_faq">Frequently asked questions</string>
	<string name="mo_about_more">The #LOSAL APP is managed as a service of Localism Inc. using the Localism! Community Engagement Platform (CEP).  Localism! is connecting and empowering local organizations through community-centric technology. \nLearn more at Localism.co/schools</string>
	<string name="mo_suggest_more">We want to make the #LOSAL APP the #BestAppEver!  Have an idea?  Email us!</string>
		<string name="mo_help_more">If you\'re having issues with the app or not sure how to use it, please email us and describe the issue in detail. Note: This link will send some non-personal diagnostic info about your phone so we can troubleshoot any issues.</string>
	<string name="mo_safety_more">Do you need to report an emergency\?  
\nClick to call 911 now. </string>
<string name="mo_safety_more1">
\nNot an emergency\? 
\nIf you see something, say something:
\nCall 562-391-2193 to reach Los Al USD\'s campus safety. 
	</string>
<string name="mo_safety_more2">
\n#LOSAL APP security
\nThis app is built on Localism\'s CEP and has the following security features:
Only members of the school community who have been verified have full access to app content (level 1 access).  This level of access only displays students using an obfuscated "persona" format (avatar, first name and last initial), and the posts do not link to the students\' real social media profiles.  
\nFor posts to appear in the app, they must be:
\n- Photos that are already publicly available on the internet from Twitter, Instagram or Facebook
\n- Tagged with #losal
\n- Submitted by verified students (in-person verification at school) 
\n- From students who have successfully completed two-factor authentication for their smartphone

\n\nLevel 2 access is for verified parents, faculty and staff.  Verification for adults includes in-person verification, and two-factor smartphone authentication.  Adults have the ability to see all posts and the obfuscated persona of the student, but they do not have the ability to \"like\" or "favorite" posts. 

\n\nLevel 3 access is for non-verified app users. They only see a photo wall in the social feed. They do not see textual content of posts or the obfuscated persona.

\n\nPrivacy and server security
\nLocalism Inc.\'s CEP is 100% FERPA-compliant meeting or exceeding applicable provisions of the Family Educational Rights and Privacy Act (FERPA), 20 U.S.C. 1232g. Privacy and security measures are in place to protect user data and data transfer. The privacy and security of student data is our first priority. 
See our privacy policy for more information.
\n\nPrivacy policy (English)
</string>
	<string name="mo_safety_more3">
\nPolítica de privacidad (Español)</string>
			<string name="mo_faq_more">How can I post to the app\? 
\nVerified students must do three things before posting to the app\:  
\n- Get verified at school (such as registration)
\n- Confirm their phone by clicking a confirmation text message
\n- Set their persona (avatar, etc.)
\n- Activate at least one supported social network (only Twitter and Instagram are supported in this version, with Facebook to follow).

\n\nCan parents submit posts to the app\? 
\nNo, the social feed would probably be filled with parent posts and drown out student posts.  That said, a \"parents corner\" may be added to the app if there is interest.  You can vote for this feature and suggest others by emailing us! 
	</string>
<string name="mo_faq_more1">
\nCan teachers submit posts to the app\? 
\nWe are planning on it, and students have requested it. If you have want to voice your opinion, email us. 


\n\nCan the school see my other posts? 
\nNo. In fact only public posts that have been specifically tagged with #losal enter the system. The system does not index private posts.  That would be creepy!

\n\nI made a post and submitted it by tagging it with #losal, but it didn\'t appear on the social feed. What gives\?
\nA variety of factors give more weight to post, and only posts that surpass a threshold are displayed in the feed. Weighting factors can include the amount of likes and relevance to selected campus keywords.  Additionally the platform ignores posts that contain common NSFS terms (Not Safe For School).  The purpose of the social feed is to connect the campus with posts from students about school life and activities.  The algorithm and automatic filtering has been tuned to yield these results.</string>
		<string name="mo_reset_more">The #LOSAL App can be reset, which takes it back to the start screen and requests a mobile number for verification. Click here to reset.</string>
	<string name="mo_special_thanks">Special Thanks &amp; Acknowledgements</string>
	<string name="mo_special_thanks_more">
The Localism team would like to thank the following individuals for their vision, great support and friendship as we\'ve brought the #LOSAL App to life for Android and iPhone!  
\nIn order of appearance:  LAHS staff and faculty including Principal Josh Arnold, Melissa Miller, Keely Hafer, Dan Bennett and Karissa Ferrell; Los Alamitos USD staff including Superintendent Sherry Kropp and Tina Dingillo, along with school board members Lisa Boyer, Karen Russell, David Boyer, Diana Hill, Meg Cutuli, and Jeff Barke;  A HUGE applause goes out to ASB and the student volunteers who helped to get the app launched;  A special shout out to Markus Manley and Robbie Brown from We Labs, along with the We Labs members who helped with feedback and testing;  and finally to LB Tech and Executive Director John Grefe (Los Al alum!). 
\nThe Localism app team:  DW Ferrell, Joaquin Brown, James Hall, Joe Czubiak, Phoenix Singharatsavong, and special help from Jeff Algera of Principal.LA.
</string>
</resources>